adding pgp info

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -74,6 +74,10 @@ a:hover {
     color: #55a9d2;
   }
 
+  strong, b {
+    color: #55a9d2;
+  }
+
   .bibliography_nums {
     color: #55a9d2;
   }
