adding pgp info in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,6 +18,7 @@
             {%- if site.email -%}
             <li><a class="u-email" href="mailto:contact-tg0@proton.me">{{ site.email }}</a></li>
             {%- endif -%}
+            <li><p id="footer-pgp-fingerprint">BB87 4DDD CFDA F1DC 748B 6A19 F1EB B2DE 9616 79C8</p></li>
         </ul>
       </div>
 
