--- a/assets/main.scss
+++ b/assets/main.scss
@@ -62,6 +62,10 @@ a:hover {
     color: #949494;
 }
 
+#footer-pgp-fingerprint {
+    font-size: 0.55em;
+}
+
 
 
 
@@ -174,7 +178,9 @@ a:hover {
     color: #55a9d2;
   }
 
-
+  #footer-pgp-fingerprint {
+    font-size: 0.55em;
+  }
 
 
 }
